test/errors/error21.base
Missing arguments in function call. Expecting 2 but got 1.
fun bar () {
   val x = foo(1);
               ^
